# ambient-walrus

./: Cargo.toml  README.mkdn  example.toml
notes/: 20240410.mkdn
src/: config.rs  control.rs  generate.rs  ipc_client.rs  ipc_server.rs  main.rs  sensor.rs
src/control/: linux_backlight.rs
src/sensor/: iio_sensors_proxy.rs
