[package]
name = "ambientwalrus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-stream = "0.3.5"
brightr = { version = "0.1.0", path = "../brightr" }
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
futures = "0.3.30"
logind-zbus = "4.0.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
toml = "0.7.8"
zbus = "4.1.2"
